tests/fixtures/invalid/pow_bytes_int_bytes.py
# Cannot call pow() with Bytes, Int, Bytes
x = pow(b"hello", 1, b"hello")
